--- a/SuperScience/SuperScience/Base.lproj/Main.storyboard
+++ b/SuperScience/SuperScience/Base.lproj/Main.storyboard
@@ -1,26 +1,84 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--InicioScreen-->
+        <scene sceneID="cGM-8W-alg">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Inicio" referencedIdentifier="InicioScreen" id="zVz-gu-rzl" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="C3E-hb-tA7"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QyG-87-EKz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="644" y="-401"/>
+        </scene>
+        <!--ConceitosScreen-->
+        <scene sceneID="yJa-Ix-65N">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Conceitos" referencedIdentifier="ConceitosScreen" id="Y05-SZ-YvY" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="0KI-HR-nU4"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ho8-Im-rvn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="644" y="-225"/>
+        </scene>
+        <!--VestibularScreen-->
+        <scene sceneID="cwH-HP-Owt">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Vestibular" referencedIdentifier="VestibularScreen" id="I8Q-rb-MEE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Y0R-8P-hZD"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T6H-RN-h62" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="643" y="-60"/>
+        </scene>
+        <!--AmigosScreen-->
+        <scene sceneID="qaj-Gf-3tD">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Amigos" referencedIdentifier="AmigosScreen" id="utT-nh-cWQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="axK-JE-1CX"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4PJ-H2-CgH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="643" y="164"/>
+        </scene>
+        <!--LojaScreen-->
+        <scene sceneID="X6y-nE-mql">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Loja" referencedIdentifier="LojaScreen" id="FWL-7M-gzJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="o5S-eB-AGi"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2PC-lA-CzR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="644" y="320"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="CQR-M8-JXu">
+            <objects>
+                <tabBarController id="yl4-gD-NXl" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="8cr-aW-gSc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="zVz-gu-rzl" kind="relationship" relationship="viewControllers" id="OgY-id-h2A"/>
+                        <segue destination="Y05-SZ-YvY" kind="relationship" relationship="viewControllers" id="dVN-Tp-8UW"/>
+                        <segue destination="I8Q-rb-MEE" kind="relationship" relationship="viewControllers" id="DuV-UG-okw"/>
+                        <segue destination="utT-nh-cWQ" kind="relationship" relationship="viewControllers" id="3bf-KR-PWg"/>
+                        <segue destination="FWL-7M-gzJ" kind="relationship" relationship="viewControllers" id="wFE-R5-V7A"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ecr-Ne-iIh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-308" y="33"/>
         </scene>
     </scenes>
 </document>
