--- a/SuperScience/SuperScience/Base.lproj/Main.storyboard
+++ b/SuperScience/SuperScience/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UzU-Hl-gwu">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -17,7 +17,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9OM-1e-HDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-970" y="-221"/>
+            <point key="canvasLocation" x="-974" y="-215"/>
         </scene>
         <!--Conta-->
         <scene sceneID="Ijh-fB-N74">
@@ -27,7 +27,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2l-eR-MjA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-998" y="-33"/>
+            <point key="canvasLocation" x="-998" y="-30"/>
         </scene>
         <!--Seila-->
         <scene sceneID="g2S-Hx-EYu">
@@ -37,12 +37,12 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ehj-nU-rNS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-998" y="179"/>
+            <point key="canvasLocation" x="-1003" y="195"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--View Controller-->
         <scene sceneID="fa3-hn-4sf">
             <objects>
-                <tabBarController id="UzU-Hl-gwu" sceneMemberID="viewController">
+                <tabBarController id="UzU-Hl-gwu" customClass="ViewController" customModule="SuperScience" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="QZP-Wa-XGa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -50,8 +50,6 @@
                     </tabBar>
                     <connections>
                         <segue destination="fZZ-Wu-fgY" kind="relationship" relationship="viewControllers" id="jop-7X-Tqi"/>
-                        <segue destination="oao-mV-gDy" kind="relationship" relationship="viewControllers" id="bDp-rx-IlW"/>
-                        <segue destination="wBe-vk-7UR" kind="relationship" relationship="viewControllers" id="IyX-ge-0QY"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7c-au-qr1" userLabel="First Responder" sceneMemberID="firstResponder"/>
