--- a/SuperScience/SuperScience/Disciplinas.storyboard
+++ b/SuperScience/SuperScience/Disciplinas.storyboard
@@ -55,7 +55,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="xQe-rj-gA1" kind="show" trigger="accessoryAction" id="Cea-Vt-v8F"/>
+                                    <segue destination="xQe-rj-gA1" kind="show" id="851-ul-qyu"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="0JS-Mh-bc4">
@@ -79,7 +79,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="nix-yg-rrf" kind="show" trigger="accessoryAction" id="lR4-Q9-pGf"/>
+                                    <segue destination="nix-yg-rrf" kind="show" trigger="accessoryAction" id="lyn-ej-aZu"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Pl1-hh-5tx">
@@ -103,7 +103,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="jNZ-Uw-ClI" kind="show" trigger="accessoryAction" id="ygQ-sa-khW"/>
+                                    <segue destination="jNZ-Uw-ClI" kind="show" trigger="accessoryAction" id="O3h-15-eS2"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -116,7 +116,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IBz-sn-zXK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-50" y="115"/>
+            <point key="canvasLocation" x="-50.399999999999999" y="114.69265367316342"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Muu-hu-jgi">
