--- a/SuperScience/SuperScience/Disciplinas.storyboard
+++ b/SuperScience/SuperScience/Disciplinas.storyboard
@@ -34,7 +34,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="158" id="2SP-8X-pCx">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="158" id="2SP-8X-pCx" customClass="TableViewCell" customModule="SuperScience" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="158"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2SP-8X-pCx" id="S6r-ap-Voh">
@@ -42,11 +42,11 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nFa-aZ-9fp">
-                                            <rect key="frame" x="4" y="14" width="128" height="128"/>
+                                            <rect key="frame" x="8" y="14" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Física" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xot-Mj-DLf">
-                                            <rect key="frame" x="140" y="68" width="44" height="21"/>
+                                            <rect key="frame" x="144" y="68" width="44" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -55,55 +55,8 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="xQe-rj-gA1" kind="show" id="851-ul-qyu"/>
-                                </connections>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="0JS-Mh-bc4">
-                                <rect key="frame" x="0.0" y="186" width="375" height="158"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0JS-Mh-bc4" id="mLD-KF-K4M">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="158"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qtR-1T-3e4">
-                                            <rect key="frame" x="0.0" y="15" width="134" height="128"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Química" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11M-JI-MsF">
-                                            <rect key="frame" x="142" y="69" width="63" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="nix-yg-rrf" kind="show" trigger="accessoryAction" id="lyn-ej-aZu"/>
-                                </connections>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Pl1-hh-5tx">
-                                <rect key="frame" x="0.0" y="344" width="375" height="158"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pl1-hh-5tx" id="zgX-qq-xBy">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="158"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b0L-9U-zBC">
-                                            <rect key="frame" x="0.0" y="15" width="130" height="128"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Biologia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PBk-ls-7Yy">
-                                            <rect key="frame" x="138" y="69" width="61" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="jNZ-Uw-ClI" kind="show" trigger="accessoryAction" id="O3h-15-eS2"/>
+                                    <outlet property="disciplinaImage" destination="nFa-aZ-9fp" id="S4a-g2-lCb"/>
+                                    <outlet property="disciplinaLabel" destination="xot-Mj-DLf" id="ygj-mZ-hkM"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -113,33 +66,18 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="Yqv-9d-LZQ"/>
+                    <connections>
+                        <segue destination="xQe-rj-gA1" kind="show" identifier="showDisciplina" id="X6q-3t-xDQ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IBz-sn-zXK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-50.399999999999999" y="114.69265367316342"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="Muu-hu-jgi">
-            <objects>
-                <viewController id="jNZ-Uw-ClI" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="K6c-pr-2PT"/>
-                        <viewControllerLayoutGuide type="bottom" id="dpe-JC-P4h"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="PhB-6R-xE5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jjd-i5-jRd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1009" y="481"/>
-        </scene>
-        <!--View Controller-->
         <scene sceneID="ZPQ-at-ZgA">
             <objects>
-                <viewController id="xQe-rj-gA1" sceneMemberID="viewController">
+                <viewController id="xQe-rj-gA1" customClass="ViewController" customModule="SuperScience" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Cry-FF-KVn"/>
                         <viewControllerLayoutGuide type="bottom" id="M2j-ZZ-kSE"/>
@@ -152,25 +90,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Max-eu-Uju" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1009" y="-884"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="o1y-RJ-Mut">
-            <objects>
-                <viewController id="nix-yg-rrf" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Hm4-v8-hMu"/>
-                        <viewControllerLayoutGuide type="bottom" id="Ewi-lB-KHA"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="QGS-RE-BCB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="X5a-4w-w5y" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1009" y="-199"/>
+            <point key="canvasLocation" x="881" y="115"/>
         </scene>
     </scenes>
 </document>
