--- a/SuperScience/SuperScience/Disciplinas.storyboard
+++ b/SuperScience/SuperScience/Disciplinas.storyboard
@@ -29,7 +29,7 @@
                                     <outlet property="delegate" destination="Xoq-SS-EkJ" id="dS1-zQ-7sH"/>
                                 </connections>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="158" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vmi-MH-jiW">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="158" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vmi-MH-jiW">
                                 <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -52,6 +52,15 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JD0-Vo-rKh">
+                                                    <rect key="frame" x="321" y="59" width="32" height="40"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lmt-7w-g6L">
+                                                    <rect key="frame" x="0.0" y="157" width="375" height="1"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="0.57647058823529407" green="0.57647058823529407" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="2f9-JD-9xt" firstAttribute="centerY" secondItem="ixW-C3-qVu" secondAttribute="centerY" id="3iY-E6-brR"/>
@@ -65,6 +74,7 @@
                                         <connections>
                                             <outlet property="disciplinaImage" destination="2f9-JD-9xt" id="ER6-ST-lAd"/>
                                             <outlet property="disciplinaLabel" destination="H80-MI-hVQ" id="arl-sG-LC1"/>
+                                            <outlet property="setaImage" destination="JD0-Vo-rKh" id="DBN-K8-Pqb"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
